--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,18 +1,27 @@
-name: job_platform_mobile
-description: Мобильное приложение для платформы вакансий
-publish_to: "none"
+name: mobile
+description: "Job Platform Mobile — Flutter приложение для работы с вакансиями."
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
   http: ^1.2.0
   provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^5.0.0
+
+flutter:
+  uses-material-design: true
+  # Если понадобятся изображения или файлы, добавь их сюда:
+  # assets:
+  #   - assets/images/
+  #   - assets/icons/
